syntax = "proto3";
package crawler;

service Crawler { 
    rpc GetJob(GetJobRequest) returns (GetJobResponse);
    rpc ReturnJob(ReturnJobRequest) returns (ReturnJobResponse);
    rpc KeepAliveJob(KeepAliveJobRequest) returns (KeepAliveJobResponse); 
}

message GetJobRequest {}

message GetJobResponse {
    int64 id = 1;
    string url = 2;
}

message ReturnJobRequest {
    int64 id = 1;

    string MIME_type = 2;

    optional string icon_url = 3;

    repeated string linked_urls = 4;

    // text sections
}

message ReturnJobResponse {}

message KeepAliveJobRequest {
    int64 id = 1;
}

message KeepAliveJobResponse {}
